# backend/internal/controller/restapi/v1/request/team.go
@@ -7,3 +7,7 @@ type CreateTeamRequest struct {
 type JoinTeamRequest struct {
 	InviteToken string `json:"invite_token" validate:"required,not_empty" example:"a1b2c3d4-e5f6-7890-abcd-ef1234567890"`
 }
+
+type TransferCaptainRequest struct {
+	NewCaptainId string `json:"new_captain_id" validate:"required,uuid" example:"a1b2c3d4-e5f6-7890-abcd-ef1234567890"`
+}
